# 699-capstone-team14

./: .gitignore  README.md  pyproject.toml  repository_pastebin.text  requirements.txt
classifier_pipeline/: README.md
classifier_pipeline/config/: network_config.yaml
classifier_pipeline/inference/: __init__.py  cuisine_classifier.py  infusion_suggestor.py
classifier_pipeline/network/: __init__.py  analysis.py  builder.py  graph.py
classifier_pipeline/notebooks/: 01_build_network.ipynb  02_infusion_suggestions.ipynb  03_cuisine_classification.ipynb
data/: cuisine_parent_map.json
networks/: interative_map.py  modeling_extended.py  plots.py
notebooks/: 01_ingredients_pipeline.ipynb  02_cuisine_pipeline.ipynb  03_analysis_recommender.ipynb  download.ipynb  encoding.ipynb  normalization.ipynb  notebook.ipynb  requirements.txt
notebooks/preprocess/: encoding.ipynb
notebooks/training/: training_1.ipynb
pipeline/: run_ingrnorm.py
pipeline/common/: logging_setup.py
pipeline/config/: config.yaml  ingredient_ner.yaml
pipeline/ingredient_ner/: __init__.py  config.py  data_prep.py  inference.py  normalization.py  utils.py  viz.py
pipeline/ingrnorm/: __init__.py  cosdedupe.py  dedupe.py  dedupe_map.py  encoder.py  parquet_utils.py  sbert_dedupe.py  simplified_cleaner.py  spacy_normalizer.py  spellmap.py  stats_normalizer.py  w2v_dedupe.py
pipeline/networks/: interative_map.py  modeling_extended_faster.py  run_phase2.py  sandbox.py  temporary_cleaning.py  visualization.py
pipeline/scripts/: apply_ingredient_ner.py  run_ingredient_ner.py  run_ingrnorm.py
preprocess_pipeline/: PIPELINE_REFACTORING.md  TASK_BASED_PIPELINE.md  UNIFIED_PIPELINE.md
preprocess_pipeline/config/: config.yaml  cuisine_classifier.yaml  cuisnorm.yaml  ingredient_ner.yaml  ingredient_ner_inference.yaml  ingrnorm.yaml
preprocess_pipeline/cuisine_classifier/: __init__.py  config.py  data_prep.py  training.py
preprocess_pipeline/ingredient_ner/: __init__.py  data_prep.py  training.py  utils.py
preprocess_pipeline/ingrnorm/: __init__.py  dedupe_map.py  encoder.py  io.py  parquet_utils.py
preprocess_pipeline/notebooks/: 00_unified_pipeline.ipynb
preprocess_pipeline/pipeline/: base.py  config.py  run_cuisine_pipeline.py  run_pipeline.py  task_orchestrator.py
preprocess_pipeline/scripts/: 1_run_ingrnorm.py  2_run_ingredient_ner.py  3_combine_raw_dataset.py  4_apply_ingredient_ner.py  5_run_cuisine_norm.py  6_encode_ingredients.py  7_train_cuisine_classifier.py
public/: cuisine_network.html  index.html  ingredient_network.html
public/fusion/: fusion_African_American.json  (+329 more)
scripts/: merge_inference_outputs.py
src/: pyproject.toml
src/networks/: config.py  run_phase_1.py
src/networks/phase1/: modeling.py  sanity_check_results.py
src/networks/phase2/: graph_features.py  pmi_pairings.py
src/preprocess_pipeline/config/: pipeline.yaml
src/preprocess_pipeline/cuisine_classifier/: data_prep.py  utils.py
src/preprocess_pipeline/ingredient_ner/: config.py  inference.py  training.py
src/preprocess_pipeline/ingrnorm/: w2v_dedupe.py
src/preprocess_pipeline/pipeline/: __init__.py  __main__.py  core.py  runner.py  utils.py
src/preprocess_pipeline/pipeline/stages/: __init__.py  combine_raw.py  cuisine_classifier.py  cuisine_normalization.py  ingredient_encoding.py  ingredient_ner_infer.py  ingredient_ner_train.py
src/recipe_pipeline/: __init__.py  __main__.py  core.py  registry.py  runner.py  utils.py
src/recipe_pipeline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/recipe_pipeline/analysis/: __init__.py  baseline.py  graph.py  ingredients_summary.py  pmi.py  recommender.py  recommender_stage.py  viz.py
src/recipe_pipeline/config/: __init__.py  loader.py  pipeline.yaml
src/recipe_pipeline/cuisine_classifier/: config.py  data_prep.py  training.py  utils.py
src/recipe_pipeline/ingredient_ner/: config.py  data_prep.py  inference.py  normalization.py  utils.py
src/recipe_pipeline/ingrnorm/: dedupe_map.py  io.py  sbert_dedupe.py  spacy_normalizer.py
src/recipe_pipeline/preprocessing/: __init__.py  cleanup_artifacts.py  combine_raw.py  cuisine_classifier.py  cuisine_normalization.py  download_kaggle_raw.py  ingredient_ner_infer.py  ingredient_normalization.py  ingredient_post_map.py
src/recipe_pipeline/scripts/: __init__.py
(+457 files in other folders)
