[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "recipe_pipeline"
version = "0.1.0"
description = "Recipe preprocessing and analysis pipeline"
requires-python = ">=3.8"
dependencies = [
annotated-types==0.7.0
asttokens==3.0.1
bcrypt==5.0.0
beautifulsoup4==4.13.4
bleach==6.2.0
blinker==1.9.0
blis==1.3.0
bokeh==3.6.3
catalogue==2.0.10
certifi==2025.1.31
cffi==2.0.0
charset-normalizer==3.4.1
choreographer==1.2.1
click==8.3.0
cloudpathlib==0.23.0
colorama==0.4.6
colorcet==3.1.0
confection==0.1.5
contourpy==1.3.1
cryptography==46.0.3
cupy-cuda12x==12.3.0
curl_cffi==0.11.1
cycler==0.12.1
cymem==2.0.11
decorator==5.2.1
dotenv==0.9.9
en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl
exceptiongroup==1.3.1
executing==2.2.1
fastcluster==1.3.0
fastrlock==0.8.3
filelock==3.20.0
Flask==3.1.2
fonttools==4.56.0
frozendict==2.4.6
fsspec==2025.9.0
gensim==4.4.0
greenlet==3.2.2
holidays==0.82
holoviews==1.20.2
huggingface-hub==0.36.0
idna==3.10
iniconfig==2.3.0
invoke==2.2.1
ipython==8.37.0
itsdangerous==2.2.0
jedi==0.19.2
Jinja2==3.1.6
joblib==1.5.2
jsonpickle==4.1.1
kaleido==1.2.0
kiwisolver==1.4.8
linkify-it-py==2.0.3
logistro==2.0.1
lxml==5.4.0
Markdown==3.7
markdown-it-py==3.0.0
MarkupSafe==3.0.2
matplotlib==3.10.1
matplotlib-inline==0.2.1
mdit-py-plugins==0.4.2
mdurl==0.1.2
mpmath==1.3.0
multitasking==0.0.11
murmurhash==1.0.13
narwhals==2.13.0
networkx==3.4.2
numpy==1.26.4
orjson==3.11.5
packaging==24.2
pandas==2.2.3
panel==1.6.1
param==2.2.0
paramiko==4.0.0
parso==0.8.5
peewee==3.18.1
pillow==11.1.0
platformdirs==4.3.8
plotly==6.5.0
pluggy==1.6.0
polars==1.34.0
polars-runtime-32==1.34.0
preshed==3.0.10
prompt_toolkit==3.0.52
protobuf==6.31.1
psycopg2==2.9.10
pure_eval==0.2.3
pyarrow==21.0.0
pycparser==2.22
pydantic==2.12.4
pydantic_core==2.41.5
Pygments==2.19.2
PyNaCl==1.6.0
pyparsing==3.2.1
pytest==9.0.2
pytest-timeout==2.4.0
python-dateutil==2.9.0.post0
python-dotenv==1.1.1
pytz==2025.1
pyvis==0.3.2
pyviz_comms==3.0.4
PyYAML==6.0.2
RapidFuzz==3.14.3
-e git+https://github.com/LP88888/699-capstone-team14.git@e67b84a998260ff28897b0d819b64cdb4ff9a02f#egg=recipe_pipeline
regex==2025.11.3
requests==2.32.3
safetensors==0.7.0
scikit-learn==1.7.2
scipy==1.15.3
seaborn==0.13.2
sentence-transformers==5.1.2
simplejson==3.20.2
six==1.17.0
smart_open==7.5.0
soupsieve==2.7
spacy==3.8.8
spacy-legacy==3.0.12
spacy-loggers==1.0.5
SQLAlchemy==2.0.41
srsly==2.5.1
stack-data==0.6.3
sympy==1.14.0
thinc==8.3.8
threadpoolctl==3.6.0
tokenizers==0.22.1
tomli==2.3.0
torch==2.9.1
tornado==6.4.2
tqdm==4.67.1
traitlets==5.14.3
transformers==4.57.3
typer-slim==0.20.0
typing-inspection==0.4.2
typing_extensions==4.15.0
tzdata==2025.1
uc-micro-py==1.0.3
urllib3==2.3.0
wasabi==1.1.3
wcwidth==0.2.14
weasel==0.4.2
webencodings==0.5.1
websockets==15.0.1
Werkzeug==3.1.3
wrapt==2.0.1
xyzservices==2025.1.0
yfinance==0.2.61

]

[project.scripts]
recipe-pipeline = "recipe_pipeline.__main__:main"
